Dark Mode and Sidebar saved state fixed initialization

--- a/applicant/css/navs.css
+++ b/applicant/css/navs.css
@@ -132,7 +132,7 @@ body {
     "nav nav"
     "sidebar main";
 }
-body.collapsed {
+[data-state="collapsed"] body {
   grid-template-columns: 85px 1fr;
 }
 .navbar {
@@ -151,13 +151,11 @@ body.collapsed {
 
   .logo {
     width: auto;
-    height: 100%;
-    display: flex;
+    height: 100%;  
     gap: 8px;
     margin-left: 1rem;
   }
   .logo img {
-    display: block;
     width: 50px;
     /* margin-top: 10px; */
   }
@@ -167,7 +165,7 @@ body.collapsed {
     border: none;
     color: var(--black);
     font-size: 1.5rem;
-    padding: 0 0.5rem;
+    padding: 0 1rem;
   }
   .navbar-left {
     display: flex;
@@ -228,6 +226,10 @@ body.collapsed {
 
   .sidebar-menu {
     list-style: none;
+  }
+  ul{
+    width: 100%;
+
   }
   li {
     text-align: center;
